# boring-space

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
include/: Asteroid.hpp  Entity.hpp  Game.hpp  Particle.hpp  Player.hpp  Point2D.hpp  Projectile.hpp  Timer.hpp  globals.hpp  utilities.hpp
src/: Asteroid.cpp  Entity.cpp  Game.cpp  Particle.cpp  Player.cpp  Point2D.cpp  Projectile.cpp  Timer.cpp  utilities.cpp
